2005-09-14  Tom Tromey  <tromey@redhat.com>

	* bytecode/block.cc (optimize): Ensure conditional occurs just
	before goto before removing.

2005-09-13  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (emit_saved_cleanup): Handle case where
	handler variable is -2.

2005-09-13  Tom Tromey  <tromey@redhat.com>

	* bytecode/byteutil.hh (return_p): New function.
	* bytecode/block.cc (optimize): Handle 'if' optimization when
	'goto' is in following block.  Optimize a 'goto' to a 'return'.
	Include byteutil.hh.

2005-09-13  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (finally_handler): New constructor.
	* bytecode/generate.cc (call_cleanups): Added assert.  Exit early
	if dummy entry found.
	(visit_break): Pass correct target to call_cleanups.
	(visit_do): Push a dummy finally handler.
	(visit_for_enhanced): Likewise.
	(visit_for): Likewise.
	(visit_label): Likewise.
	(visit_switch): Likewise.
	(visit_while): Likewise.

2005-09-12  Tom Tromey  <tromey@redhat.com>

	* bytecode/locals.cc (emit): Handle case where variable is
	optimized away.
	(update): Likewise.

2005-09-12  Tom Tromey  <tromey@redhat.com>

	* main.cc (argument_parser::help_options): Only print -j help if
	threads available.
	(argument_parser::parse_args): Throw better error if threads not
	available.
	* thread/thread.hh (concurrence::available): New function.

2005-09-12  Tom Tromey  <tromey@redhat.com>

	* bytecode/attribute.cc (exceptions_attribute): Unwrap the
	forwarding type.
	(emit): Likewise.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* factory.cc (find_source_file): Updated.
	(find_derived_file): Likewise.
	(process_zip_entry): Updated.
	* reader/fdreader.cc (read_all): Call note_read.
	* reader/fdreader.hh (fd_reader): Added filename argument.
	* reader/zereader.cc (read_all): Call note_read.
	* reader/zereader.hh (zip_entry_reader): Added filename argument.
	* reader/reader.hh (reader::note_read): New method.
	(reader): Added argument.